플랫폼 개발

--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -9,9 +9,9 @@
 		<link rel="stylesheet" type="text/css" href="/portal/css/basic.css">
 		<link rel="stylesheet" type="text/css" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 		<!-- JavaScript -->
-		<script type="application/javascript" src="/portal/js/jquery/jquery.min.js"></script>
-		<script type="application/javascript" src="/portal/js/datatables/jqueryDefault.js"></script>
-		<script type="application/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+		<script src="/portal/js/jquery/jquery.min.js"></script>
+		<script src="/portal/js/datatables/jqueryDefault.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 		
 		<style>
 			.gomain-button {
