--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/top.html
@@ -1,7 +1,7 @@
 <div class="ui fixed inverted menu topMenu">
 <!-- Top menu area. This comment is mandatory to make a space between top and body.-->
 </div>
-<script type="application/javascript">
+<script>
 function makeGmb()
 {
 	var menu = [];
