--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/detail.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/detail.html
@@ -65,7 +65,7 @@
 	<div class="ui button BTN_list"><i class="list icon"></i> List</div>
 </div>
 <script th:src="@{/platform/js/jquery/jquery.fileDownload.js}"></script>
-<script type="application/javascript">
+<script>
 $(document).ready(function() {	
 	JpUtilsAjax.get({
 		url: "/platform/mgmt/upload/list/data",
