--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
@@ -72,7 +72,7 @@
 <!-- Start add language -->
 <th:block th:replace="/platform/mgmt/i18n/lang :: addLang"></th:block>
 <!-- End add language -->
-<script type="application/javascript">
+<script>
 
 	$(document).ready(function() {
 	});
