--- a/jwebppy/src/main/resources/templates/platform/mgmt/i18n/lang.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/i18n/lang.html
@@ -27,7 +27,7 @@
 			    </div>
 			    <div class="ui hidden divider"></div>
 			</div>
-<script type="application/javascript">
+<script>
    	let langModal = new JpUiModal($("#MDL_writeLang"));
    	langModal.contentArea = $("#AREA_langContent");
    	langModal.settings = {
