--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -36,7 +36,7 @@
 	<div id="TBL_list"></div>
 	</form>
 </div>
-<script type="application/javascript">
+<script>
 let listTable;
 
 $(document).ready(function() {
