--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/login/history/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/login/history/list.html
@@ -40,7 +40,7 @@
 	<div id="TBL_list"></div>
 	</form>
 </div>
-<script type="application/javascript">
+<script>
 	$(document).ready(function() {
 		JpUiCalendar.datetimeCalendar($("#fromDate"), $("#toDate"));
 		
