--- a/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/common/fragments/bottom.html
@@ -17,7 +17,7 @@
 
 <form id="FORM_logout" method="post" th:action="@{/platform/security/authentication/logout}"></form>
 
-<script type="application/javascript">
+<script>
 function goHome()
 {
 	document.location.href = "/forward/entry_point";
