--- a/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/top.html
@@ -1,6 +1,6 @@
 <!-- header.jsp begin -->
 <div class="split-row"></div>
 
-<script type="application/javascript">
+<script>
 </script>
 <!-- header.jsp end -->
