--- a/jwebppy/src/main/resources/templates/portal/scm/parts/common/info/dealer/detail.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/common/info/dealer/detail.html
@@ -170,7 +170,7 @@
 		</tr>										
 	</table>
 </div>
-<script type="application/javascript">
+<script>
 $.ajax({
 	url: "/portal/scm/parts/common/info/dealer/detail/data",
     success: function(data, textStatus, jqXHR) 
