--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/alternative_popup_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/alternative_popup_list.html
@@ -42,7 +42,7 @@
 	<table id="TBL_grid" class="order-column stripe compact"></table>	
 </div>
 
-<script type="application/javascript">
+<script>
 var $tableObj;
 var totalRows = 0;
 
