--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/parts_info.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/parts_info.html
@@ -120,7 +120,7 @@
 	</tbody>        
 </table>	
 </div>	
-<script type="application/javascript">
+<script>
 $(window).load(function() {
 	ProgressBar.hide();
 });
