--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/sub_item_popup_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/sub_item_popup_list.html
@@ -45,7 +45,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>	
 	</div>
 	
-	<script type="application/javascript">
+	<script>
 	let $tableObj;
 	let totalRows = 0;
 	
