--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/error_report.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/error_report.html
@@ -16,7 +16,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<script type="application/javascript">
+	<script>
 	$(function(){
 		$tableObj = $("#TBL_grid").DataTable({
 			select: true,// row 선택 기능 켬
