--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/ship_to_party_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/ship_to_party_list.html
@@ -40,7 +40,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>	
 	
-<script type="application/javascript">
+<script>
 
 //화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
 //컬럼 width 자동. scroller 자동.
