--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_detail_inc.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_detail_inc.html
@@ -3,7 +3,7 @@
 	xmlns:th="http://www.thymeleaf.org"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 
 	<div class="block-header">
 		<div class="block-title" th:text="#{DCP_T_ORDER_DETAIL}"></div>
@@ -75,7 +75,7 @@
 		<input type="hidden" name="pToDate" th:value="${pToDate}">
 	</form>
 	
-<script type="application/javascript">
+<script>
 
 //화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
 //컬럼 width 자동. scroller 자동.
