--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_status_detail.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_status_detail.html
@@ -40,7 +40,7 @@
 	<input type="hidden" id="pToDate" name="pToDate" th:value="${pToDate}">
 	<input type="hidden" id="pOrderPartNo" name="pOrderPartNo" th:value="${pOrderPartNo}">
 	</form> 							
-	<script type="application/javascript">		
+	<script>		
 	$(function(){
 		
 		$tableObj = $("#TBL_grid").DataTable({
