--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -10,14 +10,14 @@
 <link rel="stylesheet" type="text/css" th:href="@{/platform/css/login/login.css}" />
 <link rel="stylesheet" type="text/css" class="ui" th:href="@{/platform/css/semantic/semantic.min.css}" />
 
-<script type="application/javascript" th:src="@{/platform/js/jquery/jquery.min.js}"></script>
-<script type="application/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script type="application/javascript" th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
-<script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
-<script type="application/javascript" th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
-<script type="application/javascript" th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
-<script type="application/javascript" th:src="@{/platform/js/semantic/semantic.min.js}"></script>
-<script type="application/javascript">
+<script th:src="@{/platform/js/jquery/jquery.min.js}"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/platform/js/jquery/jquery.cookie.js}"></script>
+<script th:src="@{/platform/js/semantic/semantic.min.js}"></script>
+<script>
 let INDEX_URL = "[[${T(org.jwebppy.platform.core.PlatformConfigVo).INDEX_URL}]]";
 
 $(window).load(function() {
