--- a/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/common/fragments/top.html
@@ -5,7 +5,7 @@
 <div id="gmbUsername" sec:authentication="name" style="display:none;"></div>
 
 <form id="FORM_logout" method="post" th:action="@{${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGOUT_PROCESSING_URL}}"></form>
-<script type="application/javascript" th:inline="javascript">
+<script th:inline="javascript">
 function makeGmb()
 {
 	//Make GNB
