--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/js.html
@@ -8,14 +8,14 @@
 <script th:src="@{/platform/js/dropzone/dropzone.min.js}"></script>
 <script th:src="@{/platform/js/detect_browser/detect-browser.js}"></script>
 
-<script th:src="@{/platform/js/jWebppy.utils.object.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.utils.string.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.utils.number.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.utils.path.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.ui.render.js}"></script> <!-- mandatory -->
-<script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script> <!-- mandatory -->
+<script th:src="@{/platform/js/jWebppy.utils.object.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.string.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.number.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.ajax.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.dateformat.js}"></script>
+<script th:src="@{/platform/js/jWebppy.utils.path.js}"></script>
+<script th:src="@{/platform/js/jWebppy.ui.render.js}"></script>
+<script th:src="@{/platform/js/jWebppy.ui.dimmer.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.tab.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.table.js}"></script>
 <script th:src="@{/platform/js/jWebppy.ui.modal.js}"></script>
