--- a/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -77,7 +77,7 @@
 		</div>			
 	</div>
 </div>
-<script type="application/javascript">
+<script>
 $(document).ready(function() {
 	let authorityTable = new JpUiTable($("#TBL_authority"));
 	authorityTable.settings = {
@@ -218,7 +218,7 @@ $(document).ready(function() {
 							$(".ui.tab[data-tab=authority]").html(html.join(""));
 
 							JpUtilsAjax.get({
-								url: "/platform/mgmt/content/list/data",
+								url: "/platform/mgmt/content/list/layout",
 								data: {"type" : "R"},
 								global: false,
 								success: function(data, textStatus, jqXHR)
@@ -247,6 +247,7 @@ $(document).ready(function() {
 									ajax: {
 										url: "/platform/mgmt/authority/sub_role/layout",
 										global: false,
+										traditional : true,
 										form: $("#FORM_modifyAuthority")
 									}
 							};
@@ -259,12 +260,12 @@ $(document).ready(function() {
 								{
 									values = [];
 								};
-								
+
 								$.each($("#TBL_myAuthorityList").find("input:checkbox[name=cSeq]"), function(i, item) {
 									values.push($(this).val());
 								});
 
-								myAuthorityTable.settings.ajax.data = "cSeqs=" + values.join(",");
+								myAuthorityTable.settings.ajax.data = { cSeqs: values };
 								myAuthorityTable.render();
 
 								$("#availableAutority").dropdown("clear");
