--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/list.html
@@ -54,7 +54,7 @@
 	<div id="TBL_list"></div>
 	</form>
 </div>
-<script type="application/javascript">
+<script>
 	$(document).ready(function() {
 		JpUiCalendar.datetimeCalendar($("#fromDate"), $("#toDate"));
 		$("#type").val("[[${type}]]");
