--- a/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/board/content/write.html
@@ -77,7 +77,7 @@
 	<div class="ui button BTN_back"><i class="arrow left icon"></i> Back</div>
 </div>
 <script src="https://cdn.tiny.cloud/1/5e40ny5z6wo5fmuiihjtt5jha491leumkaax5ufvyaxt55a0/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
-<script type="application/javascript">
+<script>
 $(document).ready(function() {
 	tinymce.init({
 		selector: "#editor",
