--- a/jwebppy/src/main/resources/templates/platform/mgmt/i18n/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/i18n/list.html
@@ -48,7 +48,7 @@
 <!-- Start add language -->
 <th:block th:replace="/platform/mgmt/i18n/lang :: addLang"></th:block>
 <!-- End add language -->
-<script type="application/javascript">
+<script>
 	$(document).ready(function() {
 		JpUtilsAjax.get({
 			url: "/platform/mgmt/i18n/basenames",
