--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -175,7 +175,7 @@
 	</div>		
 </div>
 </form>
-<script type="application/javascript">
+<script>
 $(document).ready(function() {
 	$(".menu .item").tab();
 	$(".ui.checkbox").checkbox();
