--- a/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/popup/fragments/js.html
@@ -1,19 +1,19 @@
-<script type="application/javascript" th:src="@{/portal/js/jquery/jquery.min.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/datatables/datatables.min.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/moment/moment.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery.min.js}"></script>
+<script th:src="@{/portal/js/jquery/jquery-ui.min.js}"></script>
+<script th:src="@{/portal/js/throttle/jquery.ba-throttle-debounce.min.js}"></script>
+<script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
+<script th:src="@{/portal/js/datatables/datatables.min.js}"></script>
+<script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
+<script th:src="@{/portal/js/moment/moment.min.js}"></script>
 
 <!-- custom javascript library -->
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.object.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.string.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.number.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.date.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.dateformat.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.popup.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.modal.js}"></script>
-<script type="application/javascript" th:src="@{/portal/js/portal.utils.path.js}"></script>
+<script th:src="@{/portal/js/portal.utils.object.js}"></script>
+<script th:src="@{/portal/js/portal.utils.string.js}"></script>
+<script th:src="@{/portal/js/portal.utils.number.js}"></script>
+<script th:src="@{/portal/js/portal.utils.date.js}"></script>
+<script th:src="@{/portal/js/portal.utils.dateformat.js}"></script>
+<script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
+<script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
+<script th:src="@{/portal/js/portal.utils.popup.js}"></script>
+<script th:src="@{/portal/js/portal.utils.modal.js}"></script>
+<script th:src="@{/portal/js/portal.utils.path.js}"></script>
