--- a/jwebppy/src/main/resources/templates/portal/layout/popup/index.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/popup/index.html
@@ -15,7 +15,7 @@
 	</head>
 <body>
 <!-- Progress bar start -->
-<script type="application/javascript">
+<script>
 ProgressBar.show();
 </script>
 <!-- Progress bar end -->
