--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/applied_model_popup_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/info/applied_model_popup_list.html
@@ -44,7 +44,7 @@
 	<table id="TBL_grid" class="order-column stripe compact"></table>	
 </div>
 
-<script type="application/javascript">
+<script>
 let $tableObj;
 let totalRows = 0;
 
