--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/onetime_address_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/onetime_address_list.html
@@ -5,7 +5,7 @@
 	layout:decorate="~{portal/layout/popup/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
 	
 	<div class="block-header">
 		<div class="block-title" th:text="#{DCP_T_ONETIME_ADDRESS}"></div>
@@ -77,7 +77,7 @@
 	</form>
 	</div>
 	
-<script type="application/javascript">
+<script>
 
 //화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
 //컬럼 width 자동. scroller 자동.
