--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/order_form.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/order_form.html
@@ -5,8 +5,8 @@
 	layout:decorate="~{portal/layout/common/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
-	<script type="application/javascript" th:src="@{/portal/js/dropzone/dropzone.min.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
+	<script th:src="@{/portal/js/dropzone/dropzone.min.js}"></script>
 	<link rel="stylesheet" type="text/css" class="ui" th:href="@{/portal/css/dropzone/dropzone.min.css}">
 
 	<!-- Modal for upload simulation -->	
@@ -165,7 +165,7 @@
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
 	
-	<script type="application/javascript">
+	<script>
 	let customerType = "[[${erpUserInfo.get("TYPE")}]]";
 	
 	$("input:radio[name=docType][value='[[${docType}]]']").prop("checked", true);
