--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/transfer_order.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/create/transfer_order.html
@@ -5,7 +5,7 @@
 	layout:decorate="~{portal/layout/popup/index}">
 
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
 	
 	<div class="block-header">
 		<div class="block-title" th:text="#{DIVEU_TXT_0062}"></div>
@@ -26,7 +26,7 @@
 		</tbody>
 	</table>
 	</div>	
-<script type="application/javascript">
+<script>
 
 $(window).load(function() {
 	ProgressBar.hide();
