--- a/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_status_list.html
+++ b/jwebppy/src/main/resources/templates/portal/scm/parts/domestic/order/display/order_status_list.html
@@ -4,7 +4,7 @@
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	layout:decorate="~{portal/layout/common/index}">
 <th:block layout:fragment="content">
-	<script type="application/javascript" th:src="@{/portal/js/portal.utils.order.js}"></script>
+	<script th:src="@{/portal/js/portal.utils.order.js}"></script>
 
 	<div class="block-header">
 		<div class="block-title" th:text="#{DIVEU_TXT_0071}"></div><!-- Order Status -->	
@@ -89,7 +89,7 @@
 	<div id="AREA_grid" class="flex-grow grid-area">
 		<table id="TBL_grid" class="order-column stripe compact"></table>
 	</div>
-	<script type="application/javascript">
+	<script>
 	let $tableObj;
 	
 	$(function(){
